# sleuth

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  SKILL.md  pyproject.toml  requirements.txt
.claude/: decisions.md
.claude/docs/: OSINT Investigation Methodology Landscape Survey  Standard Frameworks, Source Hierarchies, and Template Architecture Across Eight Intelligence Domains.md  analytical-infastructure.md  analytical-templates.md  consolidation-notes.md  contextual-itelligence.md  investigation-methodology.md
.github/: CONTRIBUTING.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
assets/: database-usage.md
assets/entity-database/: entities.json  gang-descriptions.md  gang-knowledge-base.json  relationships.json  uk-gang-knowledge-base.json
assets/geo-database/: areas.json  gang-deaths.csv  gang-information.csv  gang-music-videos.csv  locations.json
references/: guidance.md  methodology-briefing.md  methodology-guide.md  reference-index.json  tooling.md
references/analysis/: IQTS-Evidence_Evaluation_Matrix-Template.md  IQTS-Table_of_Findings-Template.md  dossier.md  evidence-assessment.md  geopandas.md  investigative-reasoning.md  matplotlib.md  methodology.md  network.md  networkx.md  source-verification.md  timeline.md  tooling.md
references/chronrel/: process.md  processing.md  t10.1.md  t10.2.md  t10.3.md  t10.4.md  t11.1.md  t11.2.md  t11.3.md  t9.1.md  t9.2.md  t9.3.md  t9.4.md
references/colent/: resolution.md  t6.1.md  t6.2.md  t6.3.md  t7.1.md  t7.2.md  t7.3.md  t8.1.md  t8.2.md
references/findis/: report-disseminate.md  t13.1.md  t13.2.md  t13.3.md  t13.4.md  t14.1.md  t14.2.md  t14.3.md  t15.1.md  t15.2.md  t15.3.md  t15.4.md
references/hypcog/: reason-debias.md  t12.1.md  t12.2.md  t12.3.md  t12.4.md
references/intelepi/: collection-filtering.md  t3.1b.md  t3.2b.md  t3.3b.md  t4.1.md  t4.2.md  t4.3.md  t5.1.md  t5.2.md  t5.3.md
references/oppstrat/: direction-foundation.md  t1.1.md  t1.2.md  t1.3.md  t1.4.md  t2.1md  t2.2.md  t2.3.md  t2.4.md  t2.5.md  t3.1a.md  t3.2.md  t3.3a.md  t3.4a.md
scripts/: __init__.py  autocomplete_mine.py  batch_convert.py  content_archiver.py  content_visualizer.py  convert_with_ai.py  corporate_intel.py  database_manager.py  discover_artists.py  entity_resolver.py  evidence_preservation.py  geolocation.py  mle_query_generator.py  network_graph.py  plot_template.py  report_generator.py  sanctions_screen.py  sentiment_analyzer.py  setup.py  style_configurator.py  sync-database.py  task_runner.py  template_builder.py  text_analyzer.py  topic_analyzer.py  update_skill_database.py
server/: README.md  mcp.json  schema.sql  setup.sh  worker.js  wrangler.jsonc
templates/: morphological.md  template-index.json
(+180 files in other folders)
